--- a/proCar.css
+++ b/proCar.css
@@ -1,16 +1,16 @@
 .carousel-container {
     display: flex;
-    padding: 20px;
+    padding: 2%;
     scroll-snap-type: mandatory;
     scroll-behavior: smooth;
     justify-content: center;
 }
 .carousel-item {
     flex: 0 0 auto;
-    width: 250px;
+    width: 20%;
     background-color: #2e2c4e;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, .6);
+    border-radius: 2%;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, .6);
     transition: transform 0.3s ease;
     text-align: center;
     z-index: 2;
@@ -20,17 +20,17 @@
 }
 .carousel-item img {
     width: 100%;
-    height: 150px;
+    height: 50%;
     object-fit: cover;
-    padding: 10px;
+    padding: 3%;
     box-sizing: border-box;
   }
   
   .carousel-item h3 {
-    margin: 10px 0;
+    margin: 2%;
   }
   
   .carousel-item p {
     color: #ffff;
-    padding: 4px;
+    padding: 3%;
   }
