--- a/typedText.css
+++ b/typedText.css
@@ -2,7 +2,7 @@
 .typedText {
   font-family: monospace;
   white-space: pre;
-  border-right: 2px solid black; 
+  border-right: 1% solid black; 
   animation: blink 0.7s step-end infinite;
   color: white;    
            
